vix/tests/checker-corpus/reject/guarded-arm-does-not-cover.vix
enum Mode {
    A,
    B,
}

fn main(m: Mode) -> Int {
    match m {
        Mode::A if true => 1,
        Mode::B => 2,
    }
}
